src/App.scss
#root {
  height: 100vh;
  max-width: 1280px;
  margin: 0 auto;
  text-align: center;
}

// CUSTOM STYLES
.logo {
  height: 100%;
  width: 500px;
}


#navigation {
  display: flex;
  justify-content: center;
  width: 100%;
  margin-top: -16px;
  margin-bottom: 16px;
  font-size: 16px;
  ul {
    display: flex;
    justify-content: center;
    margin: 0;
    list-style: none;
  }
  li {
    font-weight: bold;
    margin-right: 16px;
  }
  .nav-active a {
    color: black;
  }
}

#body {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0 24px;
}

#footer {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-bottom: 32px;
  h2 {
    font-weight: 400;
    font-size: 18px;
  }

  a {
    text-decoration: underline;
    color: black;
    &:hover {
      color: rgba(82,82,82,.7);
    }
  }
}

.footer-map {
  margin-right: 24px;
}

@media (width <= 740px) {
  ul {
    flex-direction: column;
    align-items: center;
  }
  #footer {
    flex-direction: column;
  }
}

